Fixed old charts showing on rollover and lessened area for non-visible charts

--- a/public/index.html
+++ b/public/index.html
@@ -73,12 +73,12 @@
 				</div>
 			</div>
 			<div id="class-charts" style="display: flex; margin: auto;">
-				<div class="chart-container" style="padding: 15px; margin: auto; position: relative; height:500px; width:500px">
-					<canvas id="methods-chart" style="margin: auto; height:500px; width:500px"></canvas>
+				<div class="chart-container" style="padding: 15px; margin: auto; position: relative; width:500px">
+					<canvas id="methods-chart" style="margin: auto; width:500px"></canvas>
 					<script src='scripts/node_modules/chart.js/dist/Chart.min.js'></script>
 				</div>   				
-				<div class="chart-container" style="padding: 15px; margin: auto; position: relative; height:500px; width:500px">
-					<canvas id="ratings-chart" style="margin: auto; height:400px; width:400px"></canvas>
+				<div class="chart-container" style="padding: 15px; margin: auto; position: relative; width:500px">
+					<canvas id="ratings-chart" style="margin: auto; width:400px"></canvas>
 					<script src='scripts/node_modules/chart.js/dist/Chart.min.js'></script>
 				</div>   
 			</div>
