Updated to disallow students from adding class codes that don't exist. Only update data views if user is teacher. General UI/UX improvements.

--- a/public/index.html
+++ b/public/index.html
@@ -64,12 +64,12 @@
 					<option class="disabled" value="" disabled selected></option>Please select a student</option>
 				</select>
 			</div>
-			<div id="class-charts" style="display: flex; margin: auto;">
-				<div class="chart-container" style="padding: 15px; margin: auto; position: relative; height:400px; width:500px">
+			<div id="class-charts" style="display: flex; margin: auto; height: 100%">
+				<div class="chart-container" style="padding: 15px; margin: auto; position: relative; width:500px">
 					<canvas id="check-in-chart" style="display: none; height:400px; width:400px"></canvas>
 					<script src='scripts/node_modules/chart.js/dist/Chart.min.js'></script>
 				</div>
-				<div class="chart-container" style="padding: 15px; margin: auto; position: relative; height:400px; width:500px">
+				<div class="chart-container" style="padding: 15px; margin: auto; position: relative; width:500px">
 					<canvas id="exit-ticket-chart" style="display: none; height:400px; width:400px"></canvas>
 					<script src='scripts/node_modules/chart.js/dist/Chart.min.js'></script>
 				</div>
