Modified time-based charts to automatically adjust based on given time frames. Minor adjustments to charts UI.

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <script src="https://apis.google.com/js/platform.js?onload=onLoadCallback" async defer></script>
 
 	<script src='scripts/node_modules/chart.js/dist/Chart.min.js'></script>
+	<script src='scripts/node_modules/moment/moment.js'></script>
 
   </head>
 
