Added TOS, Privacy Policy and support button.

--- a/public/index.html
+++ b/public/index.html
@@ -377,8 +377,12 @@
 		        </div>
 		    </form>
 		</div>
-
 	</div>
+	
+	<div class="footer">
+		<a href="terms-of-service.html">Terms of service</a> | <a href="https://jacoblehenbauer.com/#contact">Support</a>
+	</div>
+
 	
 	<!-- Class code modal -->
 	<div id="class-code-modal" class="modal" style="display: none">
@@ -417,8 +421,7 @@
             <button id="role-student-button" style="margin: 1.5em">Student</button>
           </div>
       </div>
-    </div>
-
+	</div>
   </body>
 
 <!-- Import and configure the Firebase SDK -->
